--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ footer p {
 }
 
 
-@media (min-width: 481px){
+@media (max-width: 480px){
     .contenidoSobremi, .nav{
         flex-direction: column;
         display: block;
