--- a/style.css
+++ b/style.css
@@ -387,31 +387,43 @@ footer p {
         width: 250px;
         height: 120px;
     }
+    header {
+        display: flex;
+        align-items: center;
+        padding: 0;
+    }
 
-}
-@media (min-width: 769px) {
-    nav ul {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        right: 0;
-        background-color:#70889E;
-        width: 200px;
-        padding: 10px;
-        box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
-        right: 0;
+    .logo {
+        margin-left: 30px;
     }
 
     .menu-icon {
         display: block;
         cursor: pointer;
         font-size: 24px;
-        margin-right: 0;
-        color:#F73081;
+        color: #F73081;
+        margin-left: auto;
+        margin-right: 30px;
+    }
+
+    nav ul {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        background-color: #70889E;
+        width: 200px;
+        padding: 0;
+        box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
     }
 
     .menu-icon.active + nav ul {
         display: flex;
+    }
+    
+    .contenidoSobremi, .nav {
+        flex-direction: column;
+        display: block;
     }
 }
